--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,15 @@ name: Release Extension Asset
 on:
   release:
     types: [published]
+  push:
+    tags:
+      - "v*"
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Tag/version to release (e.g. v0.1.0)"
+        required: false
+        type: string
 
 permissions:
   contents: write
@@ -64,6 +72,14 @@ jobs:
 
           VERSION="$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[] | select(.name=="pg_strict") | .version')"
           echo "VERSION=${VERSION}" >> "${GITHUB_ENV}"
+          TAG_NAME="${GITHUB_REF_NAME:-}"
+          if [ -z "${TAG_NAME}" ] || [[ "${TAG_NAME}" != v* ]]; then
+            TAG_NAME="${{ inputs.version }}"
+          fi
+          if [ -z "${TAG_NAME}" ] || [[ "${TAG_NAME}" != v* ]]; then
+            TAG_NAME="v${VERSION}"
+          fi
+          echo "TAG_NAME=${TAG_NAME}" >> "${GITHUB_ENV}"
 
           PG_CONFIG="$(cargo pgrx info pg-config "${PG_MAJOR}")"
           echo "Using pg_config at: ${PG_CONFIG}"
@@ -90,5 +106,8 @@ jobs:
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v2
+        if: ${{ github.event_name == 'release' || startsWith(github.ref, 'refs/tags/v') || inputs.version != '' }}
         with:
+          tag_name: ${{ env.TAG_NAME }}
+          target_commitish: ${{ github.sha }}
           files: dist/pg_strict-${{ env.VERSION }}-pg${{ env.PG_MAJOR }}-linux-x86_64.tar.gz
