Fix release workflow permissions and add overwrite_files
- Add contents: write permission at job level for GitHub Actions
- Add overwrite_files: true to handle multiple matrix jobs uploading to same release
- This fixes the 403 'Resource not accessible by integration' error
- Each PostgreSQL version build will now be able to upload to the same release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ permissions:
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
@@ -240,3 +242,4 @@ jobs:
           target_commitish: ${{ github.sha }}
           files: dist/pg_strict-${{ env.VERSION }}-pg${{ env.PG_MAJOR }}-linux-x86_64.tar.gz
           body_path: dist/release-notes.md
+          overwrite_files: true
