--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Extension Asset
+name: Release Extension Assets
 
 on:
   release:
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Tag/version to release (e.g. v0.1.0)"
+        description: "Tag/version to release (e.g. v1.0.2)"
         required: false
         type: string
 
@@ -17,8 +17,171 @@ permissions:
   contents: write
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.meta.outputs.version }}
+      tag_name: ${{ steps.meta.outputs.tag_name }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Compute version and tag
+        id: meta
+        env:
+          INPUT_VERSION: ${{ inputs.version }}
+          REF_NAME: ${{ github.ref_name }}
+        run: |
+          set -euo pipefail
+
+          VERSION="$(python - <<'PY'
+          import pathlib
+          import tomllib
+
+          data = tomllib.loads(pathlib.Path("Cargo.toml").read_text(encoding="utf-8"))
+          print(data["package"]["version"])
+          PY
+          )"
+
+          TAG_NAME=""
+          if [ -n "${REF_NAME:-}" ] && [[ "${REF_NAME}" == v* ]]; then
+            TAG_NAME="${REF_NAME}"
+          elif [ -n "${INPUT_VERSION:-}" ]; then
+            TAG_NAME="${INPUT_VERSION}"
+          else
+            TAG_NAME="v${VERSION}"
+          fi
+
+          if ! [[ "${TAG_NAME}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+([.-][0-9A-Za-z.+-]+)?$ ]]; then
+            echo "::error::Tag name must be semver-like (e.g. v1.2.3 or v1.2.3-rc.1). Got: ${TAG_NAME}"
+            exit 1
+          fi
+
+          EXPECTED="v${VERSION}"
+          if [ "${TAG_NAME}" != "${EXPECTED}" ]; then
+            echo "::error::Tag/version mismatch: Cargo.toml is ${VERSION}, but tag is ${TAG_NAME}. Bump version files before tagging."
+            exit 1
+          fi
+
+          echo "version=${VERSION}" >> "${GITHUB_OUTPUT}"
+          echo "tag_name=${TAG_NAME}" >> "${GITHUB_OUTPUT}"
+
+  create-or-update-release:
+    runs-on: ubuntu-latest
+    needs: prepare
+    env:
+      VERSION: ${{ needs.prepare.outputs.version }}
+      TAG_NAME: ${{ needs.prepare.outputs.tag_name }}
+      REPO: ${{ github.repository }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Generate release notes
+        run: |
+          set -euo pipefail
+
+          mkdir -p dist
+          cat > dist/release-notes.md <<EOF
+          # pg_strict ${TAG_NAME}
+
+          ## Installation
+
+          ### Quick Install (Linux x86_64)
+
+          Download and install the pre-built binary for your PostgreSQL version:
+
+          #### PostgreSQL 13
+          \`\`\`bash
+          wget https://github.com/${REPO}/releases/download/${TAG_NAME}/pg_strict-pg13-linux-x86_64.tar.gz
+          tar -xzf pg_strict-pg13-linux-x86_64.tar.gz
+          sudo cp pg_strict.so \$(pg_config --libdir)/
+          sudo cp pg_strict.control pg_strict--*.sql \$(pg_config --sharedir)/extension/
+          \`\`\`
+
+          #### PostgreSQL 14
+          \`\`\`bash
+          wget https://github.com/${REPO}/releases/download/${TAG_NAME}/pg_strict-pg14-linux-x86_64.tar.gz
+          tar -xzf pg_strict-pg14-linux-x86_64.tar.gz
+          sudo cp pg_strict.so \$(pg_config --libdir)/
+          sudo cp pg_strict.control pg_strict--*.sql \$(pg_config --sharedir)/extension/
+          \`\`\`
+
+          #### PostgreSQL 15
+          \`\`\`bash
+          wget https://github.com/${REPO}/releases/download/${TAG_NAME}/pg_strict-pg15-linux-x86_64.tar.gz
+          tar -xzf pg_strict-pg15-linux-x86_64.tar.gz
+          sudo cp pg_strict.so \$(pg_config --libdir)/
+          sudo cp pg_strict.control pg_strict--*.sql \$(pg_config --sharedir)/extension/
+          \`\`\`
+
+          #### PostgreSQL 16
+          \`\`\`bash
+          wget https://github.com/${REPO}/releases/download/${TAG_NAME}/pg_strict-pg16-linux-x86_64.tar.gz
+          tar -xzf pg_strict-pg16-linux-x86_64.tar.gz
+          sudo cp pg_strict.so \$(pg_config --libdir)/
+          sudo cp pg_strict.control pg_strict--*.sql \$(pg_config --sharedir)/extension/
+          \`\`\`
+
+          #### PostgreSQL 17
+          \`\`\`bash
+          wget https://github.com/${REPO}/releases/download/${TAG_NAME}/pg_strict-pg17-linux-x86_64.tar.gz
+          tar -xzf pg_strict-pg17-linux-x86_64.tar.gz
+          sudo cp pg_strict.so \$(pg_config --libdir)/
+          sudo cp pg_strict.control pg_strict--*.sql \$(pg_config --sharedir)/extension/
+          \`\`\`
+
+          #### PostgreSQL 18
+          \`\`\`bash
+          wget https://github.com/${REPO}/releases/download/${TAG_NAME}/pg_strict-pg18-linux-x86_64.tar.gz
+          tar -xzf pg_strict-pg18-linux-x86_64.tar.gz
+          sudo cp pg_strict.so \$(pg_config --libdir)/
+          sudo cp pg_strict.control pg_strict--*.sql \$(pg_config --sharedir)/extension/
+          \`\`\`
+
+          Then enable the extension in PostgreSQL:
+
+          \`\`\`sql
+          CREATE EXTENSION pg_strict;
+          \`\`\`
+
+          ### Build from Source
+
+          See the [README](https://github.com/${REPO}#installation) for detailed instructions on building from source.
+
+          ## Verify Installation
+
+          \`\`\`sql
+          SELECT pg_strict_version();
+          SELECT * FROM pg_strict_config();
+          \`\`\`
+
+          ## What's Supported
+
+          - PostgreSQL versions: 13, 14, 15, 16, 17, 18
+          - Platform: Linux x86_64
+          - Architecture: amd64
+
+          ## Documentation
+
+          Full documentation available at: https://github.com/${REPO}
+          EOF
+
+      - name: Create/Update GitHub release notes
+        uses: softprops/action-gh-release@v2
+        if: ${{ github.event_name == 'release' || startsWith(github.ref, 'refs/tags/v') || inputs.version != '' }}
+        with:
+          tag_name: ${{ env.TAG_NAME }}
+          name: pg_strict ${{ env.TAG_NAME }}
+          body_path: dist/release-notes.md
+
   build-and-upload:
     runs-on: ubuntu-latest
+    needs:
+      - prepare
+      - create-or-update-release
     permissions:
       contents: write
     strategy:
@@ -40,9 +203,13 @@ jobs:
     env:
       PG_MAJOR: ${{ matrix.pg_major }}
       PG_FEATURE: ${{ matrix.pg_feature }}
+      VERSION: ${{ needs.prepare.outputs.version }}
+      TAG_NAME: ${{ needs.prepare.outputs.tag_name }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install System Dependencies
         run: |
@@ -60,8 +227,7 @@ jobs:
             bison \
             libzstd-dev \
             curl \
-            ca-certificates \
-            jq
+            ca-certificates
 
       - name: Setup Rust Nightly
         uses: dtolnay/rust-toolchain@nightly
@@ -88,17 +254,6 @@ jobs:
         run: |
           set -euo pipefail
 
-          VERSION="$(cargo metadata --no-deps --format-version 1 | jq -r '.packages[] | select(.name=="pg_strict") | .version')"
-          echo "VERSION=${VERSION}" >> "${GITHUB_ENV}"
-          TAG_NAME="${GITHUB_REF_NAME:-}"
-          if [ -z "${TAG_NAME}" ] || [[ "${TAG_NAME}" != v* ]]; then
-            TAG_NAME="${{ inputs.version }}"
-          fi
-          if [ -z "${TAG_NAME}" ] || [[ "${TAG_NAME}" != v* ]]; then
-            TAG_NAME="v${VERSION}"
-          fi
-          echo "TAG_NAME=${TAG_NAME}" >> "${GITHUB_ENV}"
-
           PG_CONFIG="$(cargo pgrx info pg-config "${PG_MAJOR}")"
           echo "Using pg_config at: ${PG_CONFIG}"
 
@@ -117,7 +272,7 @@ jobs:
           ls -la dist/pg${PG_MAJOR}/extension
 
           tar -C dist/pg${PG_MAJOR}/extension -czf \
-            "dist/pg_strict-${VERSION}-pg${PG_MAJOR}-linux-x86_64.tar.gz" \
+            "dist/pg_strict-pg${PG_MAJOR}-linux-x86_64.tar.gz" \
             pg_strict.control \
             "pg_strict--${VERSION}.sql" \
             pg_strict.so
@@ -125,133 +280,48 @@ jobs:
       - name: Verify build artifacts
         run: |
           echo "Verifying build artifacts for pg${PG_MAJOR}..."
-          
+
           # Check that required files exist
           if [ ! -f "dist/pg${PG_MAJOR}/extension/pg_strict.control" ]; then
             echo "ERROR: pg_strict.control not found"
             exit 1
           fi
-          
+
           if [ ! -f "dist/pg${PG_MAJOR}/extension/pg_strict--${VERSION}.sql" ]; then
             echo "ERROR: pg_strict--${VERSION}.sql not found"
             exit 1
           fi
-          
+
           if [ ! -f "dist/pg${PG_MAJOR}/extension/pg_strict.so" ]; then
             echo "ERROR: pg_strict.so not found"
             exit 1
           fi
-          
+
           # Check tarball was created
-          if [ ! -f "dist/pg_strict-${VERSION}-pg${PG_MAJOR}-linux-x86_64.tar.gz" ]; then
+          if [ ! -f "dist/pg_strict-pg${PG_MAJOR}-linux-x86_64.tar.gz" ]; then
             echo "ERROR: tarball not found"
             exit 1
           fi
-          
+
           # Verify tarball contents
-          tar -tzf "dist/pg_strict-${VERSION}-pg${PG_MAJOR}-linux-x86_64.tar.gz" | tee /tmp/tar-contents.txt
-          
+          tar -tzf "dist/pg_strict-pg${PG_MAJOR}-linux-x86_64.tar.gz" | tee /tmp/tar-contents.txt
+
           if ! grep -q "pg_strict.control" /tmp/tar-contents.txt; then
             echo "ERROR: pg_strict.control missing from tarball"
             exit 1
           fi
-          
+
           if ! grep -q "pg_strict--${VERSION}.sql" /tmp/tar-contents.txt; then
             echo "ERROR: pg_strict--${VERSION}.sql missing from tarball"
             exit 1
           fi
-          
+
           if ! grep -q "pg_strict.so" /tmp/tar-contents.txt; then
             echo "ERROR: pg_strict.so missing from tarball"
             exit 1
           fi
-          
-          echo "✅ All artifacts verified successfully for pg${PG_MAJOR}"
 
-      - name: Generate release notes
-        run: |
-          cat > dist/release-notes.md << 'EOF'
-          # Installation
-          
-          ## Quick Install (Linux x86_64)
-          
-          Download and install the pre-built binary for your PostgreSQL version:
-          
-          ### PostgreSQL 13
-          ```bash
-          wget https://github.com/${{ github.repository }}/releases/download/${TAG_NAME}/pg_strict-${VERSION}-pg13-linux-x86_64.tar.gz
-          tar -xzf pg_strict-${VERSION}-pg13-linux-x86_64.tar.gz
-          sudo cp pg_strict.so $(pg_config --libdir)/
-          sudo cp pg_strict.control pg_strict--${VERSION}.sql $(pg_config --sharedir)/extension/
-          ```
-          
-          ### PostgreSQL 14
-          ```bash
-          wget https://github.com/${{ github.repository }}/releases/download/${TAG_NAME}/pg_strict-${VERSION}-pg14-linux-x86_64.tar.gz
-          tar -xzf pg_strict-${VERSION}-pg14-linux-x86_64.tar.gz
-          sudo cp pg_strict.so $(pg_config --libdir)/
-          sudo cp pg_strict.control pg_strict--${VERSION}.sql $(pg_config --sharedir)/extension/
-          ```
-          
-          ### PostgreSQL 15
-          ```bash
-          wget https://github.com/${{ github.repository }}/releases/download/${TAG_NAME}/pg_strict-${VERSION}-pg15-linux-x86_64.tar.gz
-          tar -xzf pg_strict-${VERSION}-pg15-linux-x86_64.tar.gz
-          sudo cp pg_strict.so $(pg_config --libdir)/
-          sudo cp pg_strict.control pg_strict--${VERSION}.sql $(pg_config --sharedir)/extension/
-          ```
-          
-          ### PostgreSQL 16
-          ```bash
-          wget https://github.com/${{ github.repository }}/releases/download/${TAG_NAME}/pg_strict-${VERSION}-pg16-linux-x86_64.tar.gz
-          tar -xzf pg_strict-${VERSION}-pg16-linux-x86_64.tar.gz
-          sudo cp pg_strict.so $(pg_config --libdir)/
-          sudo cp pg_strict.control pg_strict--${VERSION}.sql $(pg_config --sharedir)/extension/
-          ```
-          
-          ### PostgreSQL 17
-          ```bash
-          wget https://github.com/${{ github.repository }}/releases/download/${TAG_NAME}/pg_strict-${VERSION}-pg17-linux-x86_64.tar.gz
-          tar -xzf pg_strict-${VERSION}-pg17-linux-x86_64.tar.gz
-          sudo cp pg_strict.so $(pg_config --libdir)/
-          sudo cp pg_strict.control pg_strict--${VERSION}.sql $(pg_config --sharedir)/extension/
-          ```
-          
-          ### PostgreSQL 18
-          ```bash
-          wget https://github.com/${{ github.repository }}/releases/download/${TAG_NAME}/pg_strict-${VERSION}-pg18-linux-x86_64.tar.gz
-          tar -xzf pg_strict-${VERSION}-pg18-linux-x86_64.tar.gz
-          sudo cp pg_strict.so $(pg_config --libdir)/
-          sudo cp pg_strict.control pg_strict--${VERSION}.sql $(pg_config --sharedir)/extension/
-          ```
-          
-          Then enable the extension in PostgreSQL:
-          
-          ```sql
-          CREATE EXTENSION pg_strict;
-          ```
-          
-          ## Build from Source
-          
-          See the [README](https://github.com/${{ github.repository }}#installation) for detailed instructions on building from source.
-          
-          ## Verify Installation
-          
-          ```sql
-          SELECT pg_strict_version();
-          SELECT * FROM pg_strict_config();
-          ```
-          
-          ## What's Supported
-          
-          - PostgreSQL versions: 13, 14, 15, 16, 17, 18
-          - Platform: Linux x86_64
-          - Architecture: amd64
-          
-          ## Documentation
-          
-          Full documentation available at: https://github.com/${{ github.repository }}
-          EOF
+          echo "✅ All artifacts verified successfully for pg${PG_MAJOR}"
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v2
@@ -259,6 +329,5 @@ jobs:
         with:
           tag_name: ${{ env.TAG_NAME }}
           target_commitish: ${{ github.sha }}
-          files: dist/pg_strict-${{ env.VERSION }}-pg${{ env.PG_MAJOR }}-linux-x86_64.tar.gz
-          body_path: dist/release-notes.md
+          files: dist/pg_strict-pg${{ env.PG_MAJOR }}-linux-x86_64.tar.gz
           overwrite_files: true
