--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -170,12 +170,24 @@ jobs:
           EOF
 
       - name: Create/Update GitHub release notes
-        uses: softprops/action-gh-release@v2
         if: ${{ github.event_name == 'release' || startsWith(github.ref, 'refs/tags/v') || inputs.version != '' }}
-        with:
-          tag_name: ${{ env.TAG_NAME }}
-          name: pg_strict ${{ env.TAG_NAME }}
-          body_path: dist/release-notes.md
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          set -euo pipefail
+          RELEASE_TITLE="pg_strict ${TAG_NAME}"
+          if gh release view "${TAG_NAME}" --repo "${GITHUB_REPOSITORY}" >/dev/null 2>&1; then
+            gh release edit "${TAG_NAME}" \
+              --title "${RELEASE_TITLE}" \
+              --notes-file dist/release-notes.md \
+              --repo "${GITHUB_REPOSITORY}"
+          else
+            gh release create "${TAG_NAME}" \
+              --title "${RELEASE_TITLE}" \
+              --notes-file dist/release-notes.md \
+              --target "${GITHUB_SHA}" \
+              --repo "${GITHUB_REPOSITORY}"
+          fi
 
   build-and-upload:
     runs-on: ${{ matrix.target.runner }}
